Wrangler.toml-Line 5 - Added line to make build.sh executable for the wrangler system

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,7 @@ name = "nerdydad-me-blog"
 compatibility_date = "2025-07-25"
 
 [build]
+command = "chmod +x ./build.sh"
 command = "./build.sh"
 
 [assets]
