Post-0_The-Setup - made some edits and some additions
menus.en.toml - removed Categories from header and footer

--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -42,10 +42,10 @@
 #  pageRef = "categories/awesome"
 #  weight = 20
 
-[[main]]
-  name = "Categories"
-  pageRef = "categories"
-  weight = 20
+#[[main]]
+#  name = "Categories"
+#  pageRef = "categories"
+#  weight = 20
 
 [[main]]
   name = "Tags"
@@ -61,7 +61,7 @@
   pageRef = "tags"
   weight = 30
 
-[[footer]]
-  name = "Categories"
-  pageRef = "categories"
-  weight = 20
+#[[footer]]
+#  name = "Categories"
+#  pageRef = "categories"
+#  weight = 20
